--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  timezone: ^0.10.0
+
   flutter:
     sdk: flutter
   flutter_local_notifications: ^18.0.1
