--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,19 +29,16 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
-  timezone: ^0.10.0
-
   flutter:
     sdk: flutter
   flutter_local_notifications: ^18.0.1
+  flutter_pdfview: ^1.3.4
+  path_provider: ^2.1.5
+  pdf: ^3.11.1
+  share_plus: ^10.1.2
+  timezone: ^0.10.0
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
