--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,9 @@ dependencies:
     sdk: flutter
   flutter_local_notifications: ^18.0.1
   flutter_pdfview: ^1.3.4
+  #geocoder: ^0.2.1
+  geocoding: ^3.0.0
   geolocator: ^13.0.2
-  geocoder: ^0.2.1
   path_provider: ^2.1.5
   pdf: ^3.11.1
   share_plus: ^10.1.2
